adding the stuff

--- a/app-1-ingress.yaml
+++ b/app-1-ingress.yaml
@@ -12,7 +12,7 @@ spec:
         path: "/"
         backend: 
           service:
-            name: app-1-svc
+            name: app-1-service
             port:
               number: 80
 
