--- a/nginx-svc.yaml
+++ b/nginx-svc.yaml
@@ -4,8 +4,11 @@ metadata:
   name: nginx-svc
 spec:
   type: ClusterIP
-  ports:
-  - port: 80
   selector:
     app: nginx
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  
 
